# MyCMakeTemplate

./: CMakeLists.txt  README.md
CMakeModules/: FindXerces.cmake
